--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: auto;
   padding: 24px;
   margin-top: 56px;
